TypedLama/regression/compile_error/test004.2.lama
-- check that logical value should be TConst
local i = 0, x = A(i);
while x do
  i := i + 1;
  x := A(i)
od